# fintechco-macro-risk-modeling

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  TEAM.md  pyproject.toml  requirements.txt  setup.py
data/: Fraud_Risk_Economic_Analysis_Report.md
data/docs/: Macro_Risk_Assessment_DS_Input.md  Macro_Risk_Assessment_Dec2025.md  Macro_Risk_Assessment_Dec2025_Validation.md
data/fred/: consumer_price_index.csv  federal_funds_rate.csv  real_gdp.csv  revenue_predictions.csv  stress_period_analysis.csv  unemployment_rate.csv
data/synthetic/: customer_metrics.csv  daily_internal_metrics.csv  fraud_histories.csv  fraud_predictions.csv  id_card_features.csv  id_card_validation_predictions.csv  monthly_internal_metrics.csv
docs/: PRD_AI_Generated_Document_Detection.md  PROJECT_ORGANIZATION.md  TechSpec_AI_Generated_Document_Detection.md  naming-conventions-audit.md  prd-ai-generated-document-detection.md  reorganization-plan.md  techspec-ai-generated-document-detection.md
notebooks/: hypothesis_testing.ipynb  macro_scenario_projections.ipynb  quick_start_analysis.ipynb  risk_analyst_scenario_validation.ipynb
queries/: macro_risk_assessment_queries.sql
requirements/: base.txt  dev.txt  docs.txt  test.txt
scripts/: fetch_fred_data.py  fraud_classification_model.py  fraud_economic_risk_analysis.py  generate_synthetic_data.py  id_card_validation_model.py  linear_regression_model.py  macro_stress_analysis.py  verify_correlations.py
src/fintechco/: __init__.py
src/fintechco/api/: __init__.py
src/fintechco/data/: __init__.py
src/fintechco/features/: __init__.py
src/fintechco/models/: __init__.py
tests/: conftest.py
